--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "anishpras portfolio",
+  "name": "v1",
   "description": "Personal Website",
   "version": "1.0.0",
   "author": "Anish Prashun <anishprashun118@gmail.com>",
