--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "scripts": {
     "build": "gatsby build",
     "develop": "gatsby develop",
-    "deploy": "gatsby build && gh-pages -d public -r https://$GH_TOKEN@github.com/soroushchehresa/soroush.git",
+    "deploy": "gatsby build && gh-pages -d public -r https://$GH_TOKEN@github.com/anishpras/Anishpras.github.io.git",
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
     "start": "npm run develop",
     "serve": "gatsby serve",
